--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br/>
     <img src=".\assets\images\movie-ranking.png" alt="Movie ranking" height="300"/>
     </br/>
-    <h3><a href=".\public\birthday-invite.html">Birthday-Invite-Project</a></h3>
+    <h3><a href=".\public\Zeina-birthdayInvite.html">Birthday-Invite-Project</a></h3>
     <br/>
     <img src=".\assets\images\birthday-invite.png" alt="birthday-invite" height="300"/>
 </br>
